--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "10.15.3"
+  },
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.0",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose": "^5.6.1",
+    "mongoose-unique-validator": "^2.0.3",
+    "underscore": "^1.9.1"
   }
 }
